# AI-Powered-WooCommerce-Product-Automation-System

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  PROJECT_KNOWLEDGE.md  README.md  RUNBOOK.md  SECURITY.md  SESSION_RECAP.md  TESTING_STRATEGY.md  live_test.py  new_reqiurements.txt  pyproject.toml  requirements.txt  run.bat  wc-product-export-23-7-2026-1784805085252.csv
config/: .gitignore  ai_prompts.yaml  logging.yaml
docs/: AUDIT_REPORT.md  Architecture.md  CHANGELOG.md  CONTINUATION_PROMPT.md  DEVELOPMENT_GUIDE.md  Excel_Data_Dictionary.md  PROJECT_KNOWLEDGE.md  QUICK_START.md  SECURITY.md  WooCommerce_API.md  محصول-رنگ-Export-2026-July-23-1337.csv
input/: Product_Master - Copy.csv  Product_Master.csv  Product_Master_Input.csv
scripts/: excel_restructure.py  ftp-register-media.php  make_xlsx.py  restructure_excel.py
src/: main.py
src/ai/: client.py  manager.py
src/automation/: importer.py  scheduler.py  tracker.py
src/excel_parser/: models.py  reader.py
src/image_manager/: downloader.py  ftp_uploader.py  manager.py  uploader.py  validator.py
src/reporter/: exporter.py
src/tests/: ad_hoc_verification.py
src/utils/: credentials.py  logger.py  rate_limiter.py
src/validator/: reporter.py  rules.py  validator.py
src/woocommerce/: client.py  mapper.py
tests/test_ai/: test_ai.py
tests/test_automation/: test_automation.py
tests/test_excel_parser/: test_reader.py
tests/test_image_manager/: test_image_manager.py
tests/test_validator/: test_validator.py
tests/test_woocommerce/: test_client.py  test_variable_products.py
